02.04.2025 - STV - HomeControllerTest: Codewithme - Katrin, Harry, Sarah, Vanessa - refactor unit tests